issue #215: ship JVM compiler directives for jvector hot paths (#216)
## Summary

Closes #215 — "Ensure that jvector leverages JDK intrinsics and SIMD
instructions".

- Adds `conf/jvector-compiler-directives` to the `herddb-services`
distribution zip. It force-inlines the jvector classes that host
vector-distance hot loops (`PanamaVectorUtilSupport`,
`NativeVectorUtilSupport`, `DefaultVectorUtilSupport`, `VectorUtil`,
`cnative.NativeSimdOps`) so Panama Vector API / native SIMD intrinsics
stay on the fast path inside jvector's graph-search inner loops.
- Enables it by default in `bin/setenv.sh` via
`-XX:CompileCommandFile=conf/jvector-compiler-directives`. Users who
override `JAVA_OPTS` keep full control (the defaults are applied with
the `${JAVA_OPTS:-...}` pattern).
- No assembly-descriptor, Docker or Helm chart changes are required: the
existing `src/main/resources/conf/*` glob ships the new file, the Docker
image copies the unpacked distribution as-is, and the Helm chart's
`javaOpts: ""` values inherit the image defaults.

### Why the legacy `CompileCommandFile` format instead of the JSON
`CompilerDirectivesFile`?

Empirically, in OpenJDK 25 the JSON directives parser only retains the
**first** comma-separated pattern per `inline` option, which would
silently drop most of our directives. The legacy `.hotspot_compiler` /
`CompileCommandFile` format supports one directive per line and is fully
honored (verified with `-XX:+PrintInlining` on a minimal reproducer).

## Test plan

- [x] `mvn -B -pl herddb-services -am checkstyle:check apache-rat:check
install -DskipTests -Pci` — passes.
- [x] `mvn -pl herddb-core
-Dtest='DirectMultipleConcurrentUpdatesSuiteNoIndexesTest,DirectMultipleConcurrentUpdatesSuiteWithNonUniqueIndexesTest,DirectMultipleConcurrentUpdatesSuiteWithUniqueIndexesTest'
test` — 12/12 pass.
- [x] Unzipped the produced `herddb-services-*.zip`; confirmed
`conf/jvector-compiler-directives` is present and the JVM parses all 5
`inline` directives with the r